# cargo-edit

./: .Cargo.toml.swp  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  aliases.js  appveyor.yml  bors.toml  index.html  release.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
crates/cargo-add/: Cargo.toml
crates/cargo-add/src/: dependency.rs  errors.rs  fetch.rs  lib.rs  manifest.rs
crates/cargo-add/src/cargo/ops/: mod.rs
crates/cargo-add/src/cargo/ops/cargo_add/: crate_spec.rs  dependency.rs  manifest.rs  mod.rs
crates/cargo-add/src/ops/: mod.rs
crates/cargo-add/src/ops/cargo_add/: crate_spec.rs  dependency.rs  errors.rs  fetch.rs  manifest.rs  metadata.rs  mod.rs  registry.rs
crates/cargo-add/tests/: cargo-add.rs
crates/cargo-add/tests/cmd/: rename.sh
crates/cargo-add/tests/cmd/add/: add_basic.toml  add_multiple.toml  add_normalized_name_external.toml  build.toml  dry_run.toml  features.toml  features_empty.toml  features_multiple_occurrences.toml  features_spaced_values.toml  git.toml  git_branch.toml  git_dev.toml  git_external.toml  git_rev.toml  git_tag.toml  inline_path.toml  invalid_inline_path_self.toml  invalid_manifest.toml  invalid_name_external.toml  invalid_target_empty.toml  list_features.toml  list_features_path.toml  multiple_conflicts_with_features.toml  multiple_conflicts_with_git.toml  overwrite_default_features_with_no_default_features.toml  overwrite_features.toml  overwrite_inline_features.toml  overwrite_name_dev_noop.toml  overwrite_name_noop.toml  overwrite_no_default_features_with_default_features.toml  overwrite_optional.toml  overwrite_path_noop.toml  overwrite_path_with_version.toml  overwrite_rename_with_no_rename.toml  overwrite_rename_with_rename_noop.toml  overwrite_version_with_git.toml  overwrite_version_with_inline_path.toml  overwrite_with_rename.toml
crates/cargo-add/tests/cmd/add/add_multiple.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/build.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/dev_prefer_existing_version.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/features_unknown.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/git.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/git_branch.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/git_external.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/git_rev.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/git_tag.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/list_features.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/namever.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_default_features_with_no_default_features.in/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_inline_features.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_name_dev_noop.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_no_default_features_with_default_features.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_no_optional.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_no_optional_with_optional.in/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_version_with_git.in/: Cargo.toml
crates/cargo-add/tests/cmd/add/overwrite_version_with_git.out/: Cargo.toml
crates/cargo-add/tests/cmd/add/registry.out/: Cargo.toml
crates/cargo-add/tests/snapshots/: copy.sh  rename.sh
crates/cargo-add/tests/snapshots/add/: add_basic.stderr  add_multiple.stderr  add_normalized_name_external.stderr  add_normalized_name_external.toml  build.stderr  build_prefer_existing_version.stderr  deprecated_default_features.stderr  dev.stderr  dev.toml  dev_build_conflict.stderr  dry_run.stderr  features.toml  features_multiple_occurrences.stderr  features_preserve.stderr  features_preserve.toml  features_unknown.stderr  features_unknown.toml  git.stderr  git_conflicts_namever.stderr  git_conflicts_registry.stderr  git_conflicts_registry.toml  git_dev.stderr  git_external.stderr  git_inferred_name_multiple.stderr  git_rev.toml  git_tag.stderr  inline_path.stderr  invalid_arg.stderr  invalid_git_external.stderr  invalid_git_external.toml  invalid_git_no_unstable.stderr  invalid_inline_path.stderr  invalid_inline_path_self.stderr  invalid_inline_path_self.toml  invalid_manifest.stderr  invalid_name_external.stderr  invalid_name_external.toml  invalid_path.stderr  invalid_target_empty.stderr  invalid_vers.stderr  (+39 more)
crates/cargo-add/tests/testsuite/: cargo_add.rs  main.rs
crates/cargo-rm/: Cargo.toml
crates/cargo-rm/src/: dependency.rs  errors.rs  fetch.rs  manifest.rs  util.rs  version.rs
crates/cargo-rm/src/cargo/: lib.rs
crates/cargo-rm/src/cargo/ops/: mod.rs
crates/cargo-rm/tests/: main.rs
crates/cargo-rm/tests/dry_run/: mod.rs
crates/cargo-rm/tests/invalid_arg/: mod.rs
crates/cargo-rm/tests/invalid_dep/: mod.rs
crates/cargo-rm/tests/invalid_rm_target/: mod.rs
crates/cargo-rm/tests/invalid_rm_target_dep/: mod.rs
crates/cargo-rm/tests/invalid_section/: mod.rs
crates/cargo-rm/tests/invalid_section_dep/: mod.rs
crates/cargo-rm/tests/no_arg/: mod.rs
crates/cargo-rm/tests/rm_avoid_empty_tables/: mod.rs
crates/cargo-rm/tests/rm_build/: mod.rs
crates/cargo-rm/tests/rm_dev/: mod.rs
crates/cargo-rm/tests/rm_existing/: mod.rs
crates/cargo-rm/tests/rm_multiple_deps/: mod.rs
crates/cargo-rm/tests/rm_multiple_dev/: mod.rs
crates/cargo-rm/tests/rm_optional_dep_feature/: mod.rs
crates/cargo-rm/tests/rm_optional_feature/: mod.rs
crates/cargo-rm/tests/rm_target/: mod.rs
crates/cargo-rm/tests/rm_target_build/: mod.rs
crates/cargo-rm/tests/rm_target_dev/: mod.rs
crates/cargo-rm/tests/testsuite/: main.rs
crates/cargo-rm/tests/testsuite/cargo_rm/: mod.rs
tests/cargo-set-version/set_relative_workspace_version/in/: Cargo.toml
tests/cargo-upgrade/upgrade_verbose/in/: Cargo.toml
tests/cmd/rm/rm_multiple_deps.out/: Cargo.toml
tests/cmd/upgrade/upgrade_everything.out/: Cargo.toml
tests/fixtures/list/: Cargo.toml  Cargo.toml.sample
tests/fixtures/rm/: Cargo.toml  Cargo.toml.no_features.sample  Cargo.toml.sample
(+12515 files in other folders)
