[package]
authors = [
    "Without Boats <lee@libertad.ucsd.edu>",
    "Pascal Hertleif <killercup@gmail.com>",
    "Sebastian Garrido <sebasgarcep@gmail.com>",
    "Jonas Platte <mail@jonasplatte.de>",
    "Benjamin Gill <git@bgill.eu>",
    "Andronik Ordian <write@reusable.software>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "Cargo commands for modifying a `Cargo.toml` file.."
documentation = "https://github.com/killercup/cargo-edit/blob/master/README.md#available-subcommands"
homepage = "https://github.com/killercup/cargo-edit"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "Apache-2.0 OR MIT"
name = "cargo-edit"
readme = "README.md"
repository = "https://github.com/killercup/cargo-edit"
version = "0.13.0"
edition = "2021"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## Unreleased - ReleaseDate\n", exactly=1},
]

[[bin]]
name = "cargo-add"
path = "src/bin/add/main.rs"
required-features = ["add"]

[[bin]]
name = "cargo-rm"
path = "src/bin/rm/main.rs"
required-features = ["rm"]

[[bin]]
name = "cargo-upgrade"
path = "src/bin/upgrade/main.rs"
required-features = ["upgrade"]

[[bin]]
name = "cargo-set-version"
path = "src/bin/set-version/main.rs"
required-features = ["set-version"]

[dependencies]
concolor-control = { version = "0.0.7", default-features = false }
cargo_metadata = "0.15.4"
# Use this with default-features set to "true" (implicitly) so that reqwest,
# a transitive dependency, is compiled with support for both webpki
# certificates AND native certificates. We want support for both to be
# present, and then to let the user _select_ through configuration which
# one they want to be used.
tame-index = { version = "0.13", features = ["sparse", "native-certs", "local"] }
dunce = "1.0"
env_proxy = "0.4.1"
anyhow = "1.0"
hex = "0.4.3"
home = "0.5.5"
regex = "1.9.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
clap = { version = "4.4.2", features = ["derive", "wrap_help"], optional = true }
clap-cargo = "0.12.0"
subprocess = "0.2.9"
termcolor = "1.2.0"
toml = "0.8.19"
toml_edit = "0.22.22"
indexmap = "1"
url = "2.4.0"
pathdiff = "0.2"

[dependencies.semver]
features = ["serde"]
version = "1.0.18"

[dev-dependencies]
predicates = { version = "3.0.3", features = ["color"] }
assert_cmd = { version = "2.0.12", features = ["color-auto"] }
assert_fs = { version = "1.0.13", features = ["color-auto"] }
trycmd = "0.15.8"
snapbox = { version = "0.6.9", features = ["cmd", "path"] }
cargo-test-macro = "0.3"
cargo-test-support = "0.3"
url = "2.4.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[features]
default = [
    "add",
    "rm",
    "upgrade",
    "set-version",
]
add = ["cli"]
rm = ["cli"]
upgrade = ["cli"]
set-version = ["cli"]
cli = ["color", "clap"]
color = ["concolor-control/auto"]
test-external-apis = []
