[package]
authors = [
    "Without Boats <lee@libertad.ucsd.edu>",
    "Pascal Hertleif <killercup@gmail.com>",
    "Sebastian Garrido <sebasgarcep@gmail.com>",
    "Jonas Platte <mail@jonasplatte.de>",
    "Benjamin Gill <git@bgill.eu>",
    "Andronik Ordian <write@reusable.software>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "This extends Cargo to allow you to add and remove dependencies by modifying your `Cargo.toml` file from the command line. It contains `cargo add`, `cargo rm`, and `cargo upgrade`."
documentation = "https://github.com/killercup/cargo-edit/blob/master/README.md#available-subcommands"
homepage = "https://github.com/killercup/cargo-edit"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "Apache-2.0 OR MIT"
name = "cargo-add"
readme = "README.md"
repository = "https://github.com/killercup/cargo-edit"
version = "0.8.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "cargo-add"
path = "src/bin/cargo/main.rs"
required-features = ["add"]

[dependencies]
concolor-control = { version = "0.0.7", default-features = false }
crates-index = "0.18.1"
dunce = "1.0"
dirs-next = "2.0.0"
env_proxy = "0.4.1"
anyhow = "1.0"
git2 = "0.14"
regex = "1.3.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
clap = { version = "3.1", features = ["derive", "wrap_help"], optional = true }
#cargo = "0.59.0"
cargo.git = "https://github.com/rust-lang/cargo"
termcolor = "1.1.0"
toml_edit = { version = "0.13.3", features = ["easy"] }
indexmap = "1"
url = "2.1.1"
pathdiff = "0.2"

[dependencies.semver]
features = ["serde"]
version = "1.0.0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "arm", target_arch = "x86", target_arch = "aarch64"))'.dependencies]
ureq = { version = "2.4.0", default-features = false, features = ["tls", "json", "socks", "socks-proxy"] }

# if the CPU architecture is not supported by ring/rustls
[target.'cfg(not(any(target_arch = "x86_64", target_arch = "arm", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
native-tls = "^0.2"
ureq = { version = "2.4.0", default-features = false, features = ["native-tls", "json", "socks", "socks-proxy"] }

[dev-dependencies]
trycmd = "0.13.1"

[features]
default = [
    "add",
    "vendored-libgit2",
]
add = ["cli"]
cli = ["color", "clap"]
color = ["concolor-control/auto"]
test-external-apis = []
vendored-openssl = ["git2/vendored-openssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]
