[package]
authors = [
    "Without Boats <lee@libertad.ucsd.edu>",
    "Pascal Hertleif <killercup@gmail.com>",
    "Sebastian Garrido <sebasgarcep@gmail.com>",
    "Jonas Platte <mail@jonasplatte.de>",
    "Benjamin Gill <git@bgill.eu>",
    "Andronik Ordian <write@reusable.software>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "This extends Cargo to allow you to add and remove dependencies by modifying your `Cargo.toml` file from the command line. It contains `cargo add`, `cargo rm`, and `cargo upgrade`."
documentation = "https://github.com/killercup/cargo-edit/blob/master/README.md#available-subcommands"
homepage = "https://github.com/killercup/cargo-edit"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "Apache-2.0 OR MIT"
name = "cargo-add"
readme = "README.md"
repository = "https://github.com/killercup/cargo-edit"
version = "0.8.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "cargo-add"
path = "src/bin/cargo/main.rs"
required-features = ["add"]

[lib]
name = "cargo_add"
path = "src/cargo/lib.rs"

[dependencies]
concolor-control = { version = "0.0.7", default-features = false }
dunce = "1.0"
anyhow = "1.0"
git2 = "0.14"
clap = { version = "3.1", features = ["wrap_help"], optional = true }
#cargo = "0.59.0"
cargo.git = "https://github.com/rust-lang/cargo"
toml_edit = { version = "0.13.3", features = ["easy"] }
indexmap = "1"
url = "2.2.2"
pathdiff = "0.2"
semver = "1.0.0"

[dev-dependencies]
snapbox = { version = "0.2.8", features = ["diff", "path"] }
cargo-test-macro.git = "https://github.com/rust-lang/cargo"
cargo-test-support.git = "https://github.com/rust-lang/cargo"

[features]
default = [
    "add",
    "vendored-libgit2",
]
add = ["cli"]
cli = ["color", "clap"]
color = ["concolor-control/auto"]
test-external-apis = []
vendored-openssl = ["git2/vendored-openssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]
