[package]
name = "cargo-rm-test-fixture"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = []
dev = ["clippy"]

[dependencies]
docopt = "0.6"
pad = "0.1"
rustc-serialize = "0.3"
semver = "0.1"
toml = "0.1"
clippy = {git = "https://github.com/Manishearth/rust-clippy.git", optional = true}
