[package]
name = "cargo-rm-test-fixture"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
semver = "0.1.0"

[dependencies]
pad = "0.1"
rustc-serialize = "0.3"
toml = "0.1"
clippy = {git = "https://github.com/Manishearth/rust-clippy.git", optional = true}

[dev-dependencies]
regex = "0.1.41"
serde = "1.0.90"

[features]
std = ["serde/std", "semver/std"]
annoy = ["clippy"]
